Added a starting splash screen!

--- a/Crowded/app/src/main/res/values/strings.xml
+++ b/Crowded/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Crowded?</string>
+    <string name="title_activity_splash_screen">splashScreen</string>
 </resources>
